# Optimize-Leaf-Raking

./: LICENSE  README.md  original.py  pyproject.toml
docs/: story.md
results/: optimal_centers.csv
scripts/: run_viz.py  solve_centers_mip.py  solve_centers_pyomo.py
src/optimize_leaf_raking/: __init__.py
src/optimize_leaf_raking/core/: __init__.py  bagging.py  calibration.py  centers.py  config.py  front_sweep.py  raking.py  yard.py
src/optimize_leaf_raking/solvers/: __init__.py  mip.py
src/optimize_leaf_raking/viz/: animate.py  plotting.py
tests/: conftest.py  test_calibration.py  test_candidates_centers.py  test_mip_helpers.py  test_yard.py
